log
Tue, May 13, 2025 12:44:18 PM: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
Compilation failed
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:68:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
3f0e54c
Tue, May 13, 2025 12:45:19 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
2ac9eea
Tue, May 13, 2025 12:53:38 PM: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  2|4
total_score: 15/70
ddb0476
Tue, May 13, 2025 12:54:41 PM: 
 sudoku.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:59:27: error: unused variable 'new_node' [-Werror=unused-variable]
                     Node* new_node = copy(n);
                           ^~~~~~~~
cc1.exe: all warnings being treated as errors
0d0d869
Tue, May 13, 2025 12:55:02 PM: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
5d55f9c
Tue, May 13, 2025 12:59:09 PM: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  0|5
total_score: 0/70
affeda9
